--- a/templates/index.html
+++ b/templates/index.html
@@ -210,9 +210,7 @@
                             <span class="icon-elem"><i class="fa fa-regular fa-eye"></i></span>
                             <span class="icon-text">37</span>
                         </div>
-
                     </div>
-
                 </div>
                 <div class="photo-galery">
                     <div class="dot-nav-6-1">
@@ -222,111 +220,104 @@
                         <div class="dot6"></div>
                         <div class="dot6"></div>
                     </div>
-
                 </div>
-
             </div>
 
             <div class="block9">
                 <div class="top-part9">
-                    <span class="text9-1">Target</span>
+                    <span class="top-part-text">Target</span>
                     <div class="social-print">
-                        <a href="javascript:(print());"> <span class="icons9-1"> <i class="fa fa-print"></i></span></a>
-                        <a href="https://www.gmail.com/" target="_blank"> <span class="icons9-1"> <i class="fa fa-regular fa-envelope"></i></span></a>
-                        <a href="https://www.facebook.com/" target="_blank"> <span class="icons9-1"> <i class="fab fa-facebook-f"></i></span></a>
-                        <a href="https://www.pinterest.com/" target="_blank"> <span class="icons9-1"> <i class="fab fa-pinterest"></i></span></a>
+                        <a href="javascript:(print());"> <span class="icons6_10"> <i class="fa fa-print"></i></span></a>
+                        <a href="https://www.gmail.com/" target="_blank"> <span class="icons6_10"> <i class="fa fa-regular fa-envelope"></i></span></a>
+                        <a href="https://www.facebook.com/" target="_blank"> <span class="icons6_10"> <i class="fab fa-facebook-f"></i></span></a>
+                        <a href="https://www.pinterest.com/" target="_blank"> <span class="icons6_10"> <i class="fab fa-pinterest"></i></span></a>
                     </div>
-
                 </div>
                 <img src="../styles/images/Ivan/line.png" class="line9-1">
-                <span class="text9-2">Presentation line</span>
+                <span class="green-text">Presentation line</span>
                 <div class="content9">
                     <div class="content9-1">
                         <div class="procents9-1">
-                            <span class="text9-9">19%</span>
+                            <span class="procents9-text">19%</span>
                             <img src="../styles/images/Ivan/red1.png" class="img9-4">
                         </div>
                         <div class="text-content9">
-                            <span class="text9-3">Housewives</span>
-                            <span class="text9-4">Lorem ipsum dolor sit amet, prima ceteros.</span>
+                            <span class="text9 text9-big">Housewives</span>
+                            <span class="text9 text9-small">Lorem ipsum dolor sit amet, prima ceteros.</span>
                         </div>
                     </div>
                     <div class="content9-1">
                         <div class="procents9-2">
-                            <span class="text9-10">65%</span>
+                            <span class="procents9-text">65%</span>
                             <img src="../styles/images/Ivan/green1.png" class="img9-5">
 
                         </div>
                         <div class="text-content9">
-                            <span class="text9-5">Newlyweds</span>
-                            <span class="text9-6">Has brute elitr deserunt ea, assentior eloquen-tiam neglegentur te sed.</span>
+                            <span class="text9 text9-big">Newlyweds</span>
+                            <span class="text9 text9-small">Has brute elitr deserunt ea, assentior eloquen-tiam neglegentur te sed.</span>
                         </div>
                     </div>
                     <div class="content9-1">
                         <div class="procents9-3">
                             <img src="../styles/images/Ivan/green2.png" class="img9-6">
-                            <span class="text9-11">50%</span>
+                            <span class="procents9-text">50%</span>
                         </div>
                         <div class="text-content9">
-                            <span class="text9-7">Business lady</span>
-                            <span class="text9-8">Ei nam primis putent signiferumque.</span>
+                            <span class="text9 text9-big">Business lady</span>
+                            <span class="text9 text9-small">Ei nam primis putent signiferumque.</span>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
 
         <div class="blocks7_11_12">
             <div class="block7">
                 <div class="top-part7">
-                    <span class="text7-1">Recipe</span>
+                    <span class="top-part-text">Recipe</span>
                     <div class="social-print">
-                        <a href="javascript:(print());"> <span class="icons9-1"> <i class="fa fa-print"></i></span></a>
-                        <a href="https://www.gmail.com/" target="_blank"> <span class="icons9-1"> <i class="fa fa-regular fa-envelope"></i></span></a>
-                        <a href="https://www.facebook.com/" target="_blank"> <span class="icons9-1"> <i class="fab fa-facebook-f"></i></span></a>
-                        <a href="https://www.pinterest.com/" target="_blank"> <span class="icons9-1"> <i class="fab fa-pinterest"></i></span></a>
+                        <a href="javascript:(print());"> <span class="icons6_10"> <i class="fa fa-print"></i></span></a>
+                        <a href="https://www.gmail.com/" target="_blank"> <span class="icons6_10"> <i class="fa fa-regular fa-envelope"></i></span></a>
+                        <a href="https://www.facebook.com/" target="_blank"> <span class="icons6_10"> <i class="fab fa-facebook-f"></i></span></a>
+                        <a href="https://www.pinterest.com/" target="_blank"> <span class="icons6_10"> <i class="fab fa-pinterest"></i></span></a>
                     </div>
                 </div>
                 <img src="../styles/images/Ivan/line.png" class="line7-1">
                 <div class="diff7">
-                    <a href="#text7-2" class="text7-2 selected-text7-2">easy</a>
-                    <a href="#text7-2" class="text7-2">middle</a>
-                    <a href="#text7-2" class="text7-2">long</a>
+                    <a href="#diff-text" class="diff-text selected-diff-text">easy</a>
+                    <a href="#diff-text" class="diff-text">middle</a>
+                    <a href="#diff-text" class="diff-text">long</a>
                 </div>
                 <div class="content7">
                     <div class="content7-1">
-                        <img src="../styles/images/Ivan/salat.png" class="photo7-1" >
+                        <img src="../styles/images/Ivan/salat.png" class="photo7" >
                         <div class="text-content7">
                             <div class="author7">
-                                <span class="text7-5">by</span>
-                                <span class="text7-6">Smuckersreg Toppings</span>
+                                <span class="text7 text7-by">by</span>
+                                <span class="text7 text7-name">Smuckersreg Toppings</span>
                             </div>
-                            <span class="text7-7">Thanks for the recipe lorem ipsum bla bla bla Thanks for the recipe lore</span>
+                            <span class="text7 text7-maintext">Thanks for the recipe lorem ipsum bla bla bla Thanks for the recipe lore</span>
                         </div>
-
                     </div>
                     <div class="content7-1">
-                        <img src="../styles/images/Ivan/cocos.png" class="photo7-2" >
+                        <img src="../styles/images/Ivan/cocos.png" class="photo7" >
                         <div class="text-content7">
                             <div class="author7">
-                                <span class="text7-8">by</span>
-                                <span class="text7-9">Smuckersreg Toppings</span>
+                                <span class="text7 text7-by">by</span>
+                                <span class="text7 text7-name">Smuckersreg Toppings</span>
                             </div>
-                            <span class="text7-10">Thanks for the recipe lorem nks for the recipe</span>
+                            <span class="text7 text7-maintext">Thanks for the recipe lorem nks for the recipe</span>
                         </div>
-
                     </div>
                     <div class="content7-1">
-                        <img src="../styles/images/Ivan/hands.png" class="photo7-3" >
+                        <img src="../styles/images/Ivan/hands.png" class="photo7" >
                         <div class="text-content7">
                             <div class="author7">
-                                <span class="text7-11">by</span>
-                                <span class="text7-12">Smuckersreg Toppings</span>
+                                <span class="text7 text7-by">by</span>
+                                <span class="text7 text7-name">Smuckersreg Toppings</span>
                             </div>
-                            <span class="text7-13">Thanks for the recipe lorem nks for the recipe</span>
+                            <span class="text7 text7-maintext">Thanks for the recipe lorem nks for the recipe</span>
                         </div>
-
                     </div>
                 </div>
                 <button class="viewbutton" >VIEW MORE</button>
@@ -411,45 +402,43 @@
                 </div>
 
             </div>
-
             <div class="block10">
                 <div class="top-part10">
-                    <span class="text10-1">Timeline</span>
+                    <span class="top-part-text">Timeline</span>
                     <div class="social-print">
-                        <a href="javascript:(print());"> <span class="icons9-1"> <i class="fa fa-print"></i></span></a>
-                        <a href="https://www.gmail.com/" target="_blank"> <span class="icons9-1"> <i class="fa fa-regular fa-envelope"></i></span></a>
-                        <a href="https://www.facebook.com/" target="_blank"> <span class="icons9-1"> <i class="fab fa-facebook-f"></i></span></a>
-                        <a href="https://www.pinterest.com/" target="_blank"> <span class="icons9-1"> <i class="fab fa-pinterest"></i></span></a>
+                        <a href="javascript:(print());"> <span class="icons6_10"> <i class="fa fa-print"></i></span></a>
+                        <a href="https://www.gmail.com/" target="_blank"> <span class="icons6_10"> <i class="fa fa-regular fa-envelope"></i></span></a>
+                        <a href="https://www.facebook.com/" target="_blank"> <span class="icons6_10"> <i class="fab fa-facebook-f"></i></span></a>
+                        <a href="https://www.pinterest.com/" target="_blank"> <span class="icons6_10"> <i class="fab fa-pinterest"></i></span></a>
                     </div>
-
                 </div>
                 <img src="../styles/images/Ivan/line.png" class="line10-1">
-                <span class="text10-2">Time line</span>
+                <span class="green-text">Time line</span>
                 <div class="content10">
                     <div class="content10-1">
-                        <span class="text10-4">EASY</span>
+                        <span class="text10-diff">EASY</span>
                         <div class="item10">
-                            <span class="text10-7">15mins</span>
+                            <span class="text10-time">15mins</span>
                             <img src="../styles/images/Ivan/gren1.jpg" class="line10-2">
                         </div>
                     </div>
                     <div class="content10-1">
-                        <span class="text10-5">MIDDLE</span>
+                        <span class="text10-diff">MIDDLE</span>
                         <div class="item10">
-                            <span class="text10-8">25mins</span>
+                            <span class="text10-time">25mins</span>
                             <img src="../styles/images/Ivan/gren2.jpg" class="line10-3">
                         </div>
                     </div>
                     <div class="content10-1">
-                        <span class="text10-6">LONG</span>
+                        <span class="text10-diff">LONG</span>
                         <div class="item10">
-                            <span class="text10-9">40mins</span>
+                            <span class="text10-time">40mins</span>
                             <img src="../styles/images/Ivan/redline1.jpg" class="line10-4">
                         </div>
                     </div>
                 </div>
                 <img src="../styles/images/Ivan/line.png" class="line10-5">
-                <span class="text10-3">Eam adhuc iudico percipitur ex, ut malis audire voluptaria has.</span>
+                <span class="text10-bot">Eam adhuc iudico percipitur ex, ut malis audire voluptaria has.</span>
             </div>
         </div>
     </div>
