--- a/templates/index.html
+++ b/templates/index.html
@@ -384,10 +384,10 @@
 
         <div class="blocks8_10">
             <div class="block8">
-                <span class="text8-1">Popular Now</span>
+                <span class="text8-red">Popular Now</span>
                 <img src="../styles/images/Ivan/white_line.png" class="line8-1">
-                <span class="text8-2">Vanilla Frozen Coffee</span>
-                <span class="text8-3">Mix coffee, sugar and creamer.<br> Pour into blender and add ice cubes.<br> Blend until smooth.</span>
+                <span class="text8-big">Vanilla Frozen Coffee</span>
+                <span class="text8-small">Mix coffee, sugar and creamer.<br> Pour into blender and add ice cubes.<br> Blend until smooth.</span>
                 <div class="bot-part8">
                     <button class="viewbutton8-1">GET IT RECIPE</button>
                     <div class="stats-elem">
