--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1223,6 +1223,32 @@ body {
     margin-left: 50px;
 }
 /* ======================ARTYOM===============*/
+.spanz {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+    height: 12.5px;
+    color: #000000;
+    font-family: "Josefin Sans";
+    font-size: 12.5px;
+    font-weight: 350;
+    font-style: normal;
+    /*letter-spacing: normal;*/
+    line-height: 3;
+    text-align: left;
+    text-transform: uppercase;
+}
+.spanz1 {
+    height: 13px;
+}
+.spanz2 {
+    height: 13px;
+    margin-top: 20px;
+}
+.s1 {
+    margin-left: 3px;
+}
+
 .block11 {
     width: 290px;
     height: 160px;
@@ -1284,7 +1310,7 @@ body {
 }
 .two {
     width: 252px;
-    margin-top: 5px;
+    margin-top: 10px;
     margin-left: 15px;
     margin-bottom: 20px;
 }
@@ -1390,7 +1416,7 @@ body {
     color: #000000;
     font-family: "Josefin Sans";
     font-size: 18px;
-    font-weight: 300;
+    font-weight: 350;
     text-align: left;
     font-style: normal;
     letter-spacing: 0.45px;
@@ -1415,23 +1441,26 @@ body {
 }
 .calendar {
     margin-top: 15px;
-    margin-left: 35px;
+    margin-left: 36px;
     display: grid;
     grid-template-columns: 14.3% 14.3% 14.3% 14.3% 14.3% 14.3% 14.3%;
     grid-template-rows: 34px 34px 34px 34px 34px;
     font-family: 'Josefin Sans';
     font-size: 14px;
     line-height: 40px;
-    font-weight: 400;
-    letter-spacing: 0.025em;
+    font-weight: 600;
+    /*letter-spacing: 0.025em;*/
     width: 225px;
     height: 170px;
+    grid-row-gap: 9px;
 }
 .gr {
     color: #9e9e9e;
+    transform: skew(-7deg);
 }
 .bl {
     color: #000000;
+    transform: skew(-7deg);
 }
 .authorization {
     margin-top: 100px;
@@ -1783,7 +1812,7 @@ button:hover {
     letter-spacing: 0.35px;
     line-height: normal;
     text-decoration: underline;
-    transform: skew(-7deg);
+    font-style: italic;
 }
 .text14-7 {
     width: 36px;
