--- a/templates/index.html
+++ b/templates/index.html
@@ -327,9 +327,23 @@
                 <span class="text first">Tags </span>
                 <div class="line one"></div>
                 <div class="spanz">
-                    <span class="text11-1-1">#yummy   #sweet   #dinner   #lunch</span>
-                    <span class="text11-1-2">#breakfast   #fresh   #tasty   #delish</span>
-                    <span class="text11-1-3">#delicious   #eating   #food</span>
+                    <div class="spanz1">
+                        <span">#yummy</span>
+                        <span class="s1">#sweet</span>
+                        <span class="s1">#dinner</span>
+                        <span class="s1">#lunch</span>
+                    </div>
+                    <div class="spanz2">
+                        <span>#breakfast</span>
+                        <span class="s1">#fresh</span>
+                        <span class="s1">#tasty</span>
+                        <span class="s1">#delish</span>
+                    </div>
+                    <div class="spanz2">
+                        <span>#delicious</span>
+                        <span class="s1">#eating</span>
+                        <span class="s1">#food</span>
+                    </div>
                 </div>
             </div>
 
@@ -464,7 +478,6 @@
             </div>
             <span class="text13-5">Don’t have an accont? <a href="рпи" onclick="return false">Sign in</a></span>
         </div>
-
         <div class="block14">
             <span class="text fourth">Sign in</span>
             <div class="line three"></div>
@@ -485,6 +498,7 @@
                 <a href="../styles/images/123.jpg" target="_blank"><span class="text14-6">Terms of Service.</span></a>
                 <a href="рпи" onclick="return false" class="log"><span class="text14-7">login</span></a>
             </div>
+            
         </div> 
     </div>
 
