--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Lemon</title>
 
+    <link rel="icon" href="../styles/images/123.jpg">
     <link rel="stylesheet" href="../styles/fonts/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="../styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
