--- a/templates/index.html
+++ b/templates/index.html
@@ -496,10 +496,9 @@
             </div>
             <div class="flexspan">
                 <span class="text14-5">By joining LEMON, you agree to our </span>
-                <a href="../styles/images/123.jpg" target="_blank"><span class="text14-6">Terms of Service.</span></a>
-                <a href="рпи" onclick="return false" class="log"><span class="text14-7">login</span></a>
+                <span class="text14-6"><a href="../styles/images/123.jpg" target="_blank">Terms of Service.</a></span>
+                <span class="text14-7"><a href="рпи" onclick="return false" class="log">login</a></span>
             </div>
-            
         </div> 
     </div>
 
